0.7.0
* act: new words: act-clear, act-execute?
* act,acn extends bct,bcn (2008-04-24)
* bcn: new words: bcn-cell@,bcn-cell!
* bct: new word: bct-execute?
* bct,bcn,bci extends bnt,bnn,bni (2008-04-14)
* bnt,bnn,bni: new modules: Generic binary tree (2008-04-06)
* a32: new module: Adler32 algorithm (2008-04-03)
* chs: chs-char? bug fixed
* spf: config.fs/make.fs/readme added
* dist: also zip file with cr/lf line-endings
* iForth: config.fs/make.fs/readme added
* fsm: new module: Finite State Machine (2008-03-05)
* fst: new module: FSM State (2008-03-05)
* ftr: new module: FSM Transition (2008-03-05)
* snl: new word: snl-execute? (2008-03-05)
0.6.0
* tos: new word: tos-set-writer,tos-flush (2008-02-21)
* bct: new word: bct-clear
* nct: word nct-delete-all renamed to nct-clear
* dcl: word dcl-delete-all renamed to dcl-clear
* scl: word scl-delete-all renamed to scl-clear
* nct,nnt,str,act,bct,arg,bar,car,crc,dcl,dnl,hnn,hnt,hcn,hct,msc,nfe,snl,
  scl,tis,xis: new word: ...-(free)
* dom: new module: Document Object Model (2008-01-06)
* rdg: new module: Distributed Random Generator (2007-12-27)
* tst: new word ?str for module testing strings (2007-12-24)
* tis: new word tis-match-set
* tis: new word tis-scan-set
* chs: chs-char? return false in place of an exception if outside range
* enm: new module: Enumeration (2007-12-12)
* Stack notation changed to ANSish (2007-12-06)
! stc: structures are changed to ANS structures (2007-12-04)
* est: new module: String with escaped characters (2007-12-03)
* xos: new module: XML/HTML writer (2007-11-22)
* xis: new module: XML/HTML reader (2007-11-22)
* tos: new words: tos-msc@,tos-msc! (2007-11-20)
* stt: new module: Stringtable (2007-11-19)
* dos: new module: DateTime output stream (2007-11-18)
* hct: support for zero-length key
* str: new words: str-data@,str-length!  (2007-11-14)
* gmo: new module: Gettexts mo-file (2007-11-12)
* hnt: bug fix (2007-11-11)
* hci: extends hni